--- a/index.html
+++ b/index.html
@@ -1,89 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
-    <style>
-        body {
-            font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-            margin: 20px;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
+  <title>Scaled Video</title>
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
 
-        header {
-            background-color: #2c3e50;
-            color: #ecf0f1;
-            padding: 20px;
-        }
+    #video-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
 
-        h1 {
-            margin-bottom: 20px;
-            font-size: 2.5em;
-            color: #3498db;
-        }
+    video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+    }
 
-        section {
-            margin: 40px 0;
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            color: #3498db;
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 1.2em;
-            color: #555555;
-            line-height: 1.6;
-        }
-
-        iframe {
-            width: 100%;
-            height: 500px;
-            border: none;
-            border-radius: 10px;
-        }
-
-        footer {
-            background-color: #2c3e50;
-            color: #ecf0f1;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    .volume-control {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+  </style>
 </head>
-
 <body>
+  <div id="video-container">
+    <video id="video" src="byeBuddy.mp4" autoplay loop controls></video>
+    <div class="volume-control">
+      <label for="volume">Volume:</label>
+      <input type="range" id="volume" min="0" max="1" step="0.1" value="1" />
+    </div>
+  </div>
 
-    <header>
-        <h1>Welcome to Backyard-Fireworks.com</h1>
-    </header>
+  <script>
+    const video = document.getElementById('video');
+    const volumeControl = document.getElementById('volume');
 
-    <section>
-        <h2>Store Coming Soon!</h2>
-        <p>We're excited to announce that our store with merchandise will be opening soon.</p>
-    </section>
-
-    <section>
-        <h2>Check Out a Video in the Meantime!</h2>
-        <!-- Replace the video ID with the actual ID of your latest YouTube video -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/rwHc0GouMlI" allowfullscreen></iframe>
-    </section>
-
-    <footer>
-        &copy; 2024 Backyard-Fireworks.com All rights reserved.
-    </footer>
-
+    volumeControl.addEventListener('input', function() {
+      video.volume = volumeControl.value;
+    });
+  </script>
 </body>
-
 </html>
