Updating title and adding favicon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Scaled Video</title>
+  <title>Bye Buddy</title>
+  <link rel="icon" type="image/x-icon" href="elfIcon.png">
   <style>
     body, html {
       height: 100%;
